# artoolkit_sdl_boilerplate

./: CMakeLists.txt  sdl_template.c
Shaders/: simple.frag  simple.vert
